extends Node

@onready var locked: Node = $locked
@onready var idle: Node = $idle
@onready var run: Node = $run
@onready var jump: Node = $jump
@onready var peak_jump: Node = $peakJump
@onready var fall: Node = $fall
@onready var wall_jump: Node = $wall_jump
@onready var wall_slide: Node = $wall_slide
@onready var wall_climb: Node = $wall_climb
@onready var wall_grab: Node = $wall_grab
@onready var dash: Node = $dash
@onready var ledge_grab: Node = $ledge_grab
@onready var ledge_climb: Node = $ledge_climb
